# SpecBench

./: .gitignore  README.md  index.html  pyproject.toml  script.js
assets/: example_response.json
config/: README.md  config_eval_model.yaml  config_model.yaml  config_ttd.yaml
data/Biochem/: prompts.json  scenario.json  specifications.json
data/Child/: prompts.json  scenario.json  specifications.json
data/Code/: prompts.json  scenario.json  specifications.json
data/Health/: prompts.json  scenario.json  specifications.json
data/Travel/: prompts.json  scenario.json  specifications.json
docs/: styles.css
scripts/evaluation/: GPT-4.1-vanilla.sh  Qwen3-14B-thinking-align3.sh  Qwen3-14B-thinking-vanilla.sh  Qwen3-14B-vanilla.sh
scripts/generation/: GPT-4.1-vanilla.sh  Qwen3-14B-thinking-align3.sh  Qwen3-14B-thinking-vanilla.sh  Qwen3-14B-vanilla.sh
specbench/: evaluator.py  prompt_eval.py  prompt_ttd.py  ttd.py  utils.py
specbench/chat_templates/: Qwen3.jinja  config.json  deepseek.jinja
src/: evaluate_response.py  generate_response.py  run.py
