[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specbench"
version = "0.1.0"
description = "SpecBench"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "backoff",
    "pyyaml",
    "rich",
    "openai"
]

[tool.setuptools] 
packages = ["specbench"]